[gd_scene load_steps=6 format=3 uid="uid://bot0fif46ilfy"]

[ext_resource type="Script" path="res://hud.gd" id="1_xr2km"]
[ext_resource type="FontFile" uid="uid://c76geq5r5mlis" path="res://fonts/Xolonium-Regular.ttf" id="2_vc3xm"]
[ext_resource type="AudioStream" uid="uid://dmnw8rnpd4cs2" path="res://Sound/ringtones-zelda-1.mp3" id="3_f2xb6"]

[sub_resource type="InputEventAction" id="InputEventAction_0jdln"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_4wvep"]
events = [SubResource("InputEventAction_0jdln")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xr2km")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vc3xm")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -300.0
offset_right = 240.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vc3xm")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -160.0
offset_right = 170.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vc3xm")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_4wvep")
text = "Start new"

[node name="HardMode" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -296.0
offset_right = 178.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vc3xm")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_4wvep")
text = "Hardmode
"

[node name="GodMode" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -432.0
offset_right = 170.0
offset_bottom = -332.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_vc3xm")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_4wvep")
text = "Godmode
"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GodMode_Unlocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_f2xb6")

[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HardMode" to="." method="_on_hard_mode_pressed"]
[connection signal="pressed" from="GodMode" to="." method="_on_god_mode_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
